--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
     <body>
         <div class="main-content">
         {{>header}}
+        <p>This site was created by Jesse Cumberland. It uses data from mapbox.com and weatherstack.com!</p>
         <img class="portrait" src="/images/me.jpg">
         </div>
         {{>footer}}
