--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,18 +1,42 @@
+:root {
+    --bg: #7DC2AD;
+    --color: hsl(0, 0%, 100%);
+    --underline-width: 2px;
+    --underline-block-width: 20px;
+    --underline-color: hsla(180, 100%, 50%, 0.5);
+    --underline-color-hover: hsla(180, 100%, 50%, 1);
+    --underline-transition: 0.8s;
+  }
+
 body {
-    color: #333333;
+    color: #ffffff;
     font-family: arial;
     max-width: 650px;
     margin: 0 auto;
     padding: 0 16px;
-
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-color: #7DC2AD;
+}
+
+h1 {
+    text-shadow: 0px 2px 2px rgb(0 0 0 / 90%);
 }
 
 .main-content {
     flex-grow: 1;
+    position: relative;
+    background: #41b3a3;
+    border-radius: 0% 0% 0% 0% / 0% 0% 0% 0% ;
+    box-shadow: 20px 20px rgba(0,0,0,.15);
+    transition: all .4s ease;
 }
+
+.main-content:hover {
+    border-radius: 0% 0% 50% 50% / 0% 0% 5% 5% ;
+    box-shadow: 10px 10px rgba(0,0,0,.25);
+  }
 
 footer {
     color: #888888;
@@ -32,10 +56,27 @@ h1 {
 }
 
 header a {
-    color: #888888;
-    margin-right: 16px;
+    color: var(--color);
     text-decoration: none;
-}
+    background-image: linear-gradient(90deg, var(--bg), var(--bg)),
+    linear-gradient(90deg, var(--underline-color), var(--underline-color));
+    background-size: var(--underline-block-width) var(--underline-width),
+    100% var(--underline-width);
+    background-repeat: no-repeat;
+    background-position-x: calc(var(--underline-block-width) * -1), 0;
+    background-position-y: 100%;
+    transition: background-position-x var(--underline-transition);
+  }
+  
+ header a:hover {
+    background-image: linear-gradient(90deg, var(--bg), var(--bg)),
+      linear-gradient(
+        90deg,
+        var(--underline-color-hover),
+        var(--underline-color-hover)
+      );
+    background-position-x: calc(100% + var(--underline-block-width)), 0;
+  }
 
 .portrait {
     width: 250px
@@ -44,12 +85,138 @@ header a {
 input {
     border: 1px solid #CCCCCC;
     padding: 8px;
+    transition-duration: 0.4s;
+}
+
+input:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 button {
     cursor: pointer;
     border: 1px solid #888888;
-    background: #888888;
-    color: white;
+    background: white;
+    color: #888888;
     padding: 8px;
+    border-radius: 12px;
+    transition-duration: 0.4s;
+}
+
+button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
+.thumbnail {
+    max-width: 100px;
+    max-height: 100px;
+}
+
+.reverse {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+#results-container {
+    display: grid;
+    grid-template-columns: 10% 90%;
+    grid-template-rows: auto;
+    grid-gap: 10px;
+    font-weight: bold;
+    margin-top: 40px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+#message-1 {
+    grid-column-start: 2;
+    grid-row-start: 1;
+}
+
+#message-1-img {
+    grid-column-start: 1;
+    grid-row-start: 1;
+    display: flex;
+    justify-content: center;
+}
+
+#message-2 {
+    grid-column-start: 2;
+    grid-row-start: 2;
+}
+
+#message-2-img {
+    grid-column-start: 1;
+    grid-row-start: 2;
+    display: flex;
+    justify-content: center;
+}
+
+#message-3 {
+    grid-column-start: 2;
+    grid-row-start: 3;
+    
+}
+
+#message-3-img {
+    grid-column-start: 1;
+    grid-row-start: 3;
+    display: flex;
+    justify-content: center;
+    
+}
+
+#message-4 {
+    grid-column-start: 2;
+    grid-row-start: 4;
+}
+
+#message-4-img {
+    grid-column-start: 1;
+    grid-row-start: 4;
+    display: flex;
+    justify-content: center;
+}
+
+#message-5 {
+    grid-column-start: 2;
+    grid-row-start: 5;
+}
+
+#message-5-img {
+    grid-column-start: 1;
+    grid-row-start: 5;
+    display: flex;
+    justify-content: center;
+}
+
+#message-6 {
+    grid-column-start: 2;
+    grid-row-start: 6;
+}
+
+#message-6-img {
+    grid-column-start: 1;
+    grid-row-start: 6;
+    display: flex;
+    justify-content: center;
+}
+
+.wi {
+    color: #936076;
+    font-size: 50px;
+}
+
+.wi-direction-up {
+    font-size: 100px;
+}
+
+.fa-map-pin {
+    color: #936076;
+    font-size: 50px;
+}
+
+#static-info {
+    margin-left: 10px;
 }
