--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,21 +5,38 @@
         <title>Weather</title>
         <link rel="icon" href="/images/weather.png">
         <link rel="stylesheet" href="/css/styles.css">
-    </head>
+        <link rel="stylesheet" href="/css/weather-icons.css">
+        <link rel="stylesheet" href="/css/weather-icons.min.css">
+        <link rel="stylesheet" href="/css/weather-icons-wind.css">
+        <link rel="stylesheet" href="/css/weather-icons-wind.min.css">
+        <script src="https://kit.fontawesome.com/fec719fd55.js" crossorigin="anonymous"></script>
 
+    </head>
     <body>
         <div class="main-content">
+            <div id="static-info">
             {{>header}}
             <p>Use this site to get your weather!</p>
-
 
             <form>
                 <input placeholder="Location">
                 <button>Search</button>
             </form>
-
-            <p id="message-1"></p>
-            <p id="message-2"></p>
+            </div>
+            <div id="results-container">
+            <p id="message-1" class="reverse"></p>
+            <p id="message-1-img"></p>
+            <p id="message-2" class="reverse"></p>
+            <p id="message-2-img" class=""></p>
+            <p id="message-3" class="reverse"></p>
+            <p id="message-3-img" class=""></p>
+            <p id="message-4" class="reverse"></p>
+            <p id="message-4-img" class=""></p>
+            <p id="message-5" class="reverse"></p>
+            <p id="message-5-img" class=""></p>
+            <p id="message-6" class="reverse"></p>
+            <p id="message-6-img" class=""></p>
+            </div>
         </div>
         {{>footer}}
         <script src="/js/app.js"></script>
