Fixed multiple issues; duplicate outputs, images not changing, align text, fix gaps, fixed images not showing &  created responsive changes for mobile

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weather</title>
         <link rel="icon" href="/images/weather.png">
         <link rel="stylesheet" href="/css/styles.css">
@@ -24,18 +25,18 @@
             </form>
             </div>
             <div id="results-container">
-            <p id="message-1" class="reverse"></p>
-            <p id="message-1-img"></p>
-            <p id="message-2" class="reverse"></p>
-            <p id="message-2-img" class=""></p>
-            <p id="message-3" class="reverse"></p>
-            <p id="message-3-img" class=""></p>
-            <p id="message-4" class="reverse"></p>
-            <p id="message-4-img" class=""></p>
-            <p id="message-5" class="reverse"></p>
-            <p id="message-5-img" class=""></p>
-            <p id="message-6" class="reverse"></p>
-            <p id="message-6-img" class=""></p>
+            <p id="message-1" class="dynamic"></p>
+            <p id="message-1-img" class="dynamic"></p>
+            <p id="message-2" class="dynamic"></p>
+            <p id="message-2-img" class="dynamic"></p>
+            <p id="message-3" class="dynamic"></p>
+            <p id="message-3-img" class="dynamic"></p>
+            <p id="message-4" class="dynamic"></p>
+            <p id="message-4-img" class="dynamic"></p>
+            <p id="message-5" class="dynamic"></p>
+            <p id="message-5-img" class="dynamic"></p>
+            <p id="message-6" class="dynamic"></p>
+            <p id="message-6-img" class="dynamic"></p>
             </div>
         </div>
         {{>footer}}
