--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
         <title>Weather</title>
         <link rel="icon" href="/images/weather.png">
         <link rel="stylesheet" href="/css/styles.css">
