Added jQuery to hide keyboard on submit

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="/css/weather-icons-wind.css">
         <link rel="stylesheet" href="/css/weather-icons-wind.min.css">
         <script src="https://kit.fontawesome.com/fec719fd55.js" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     </head>
     <body>
